--- a/environmentx.yml
+++ b/environmentx.yml
@@ -8,6 +8,8 @@ dependencies:
   - django-import-export
   - netcdf4
   - shapely
-  - climateserv=0.0.20
   - earthengine-api
+  - pip
+  - pip:
+      - climateserv==0.0.24
 prefix: C:\ProgramData\Anaconda3\envs\SERVIR_AppTemplate
