--- a/environment.yml
+++ b/environment.yml
@@ -1,122 +1,15 @@
 name: SERVIR_AppTemplate
 channels:
-  - anaconda
-  - servir
-  - conda-forge
   - defaults
 dependencies:
-  - aiohttp=3.8.1=py39hb82d6ee_1
-  - aiosignal=1.3.1=pyhd8ed1ab_0
-  - asgiref=3.5.2=py39haa95532_0
-  - async-timeout=4.0.2=py39haa95532_0
-  - attrs=22.1.0=pyh71513ae_1
-  - blas=1.0=mkl
-  - blinker=1.5=pyhd8ed1ab_0
-  - bottleneck=1.3.5=py39h5d4886f_0
-  - brotlipy=0.7.0=py39hb82d6ee_1004
-  - bzip2=1.0.8=h8ffe710_4
-  - ca-certificates=2022.10.11=haa95532_0
-  - cachetools=5.2.0=pyhd8ed1ab_0
-  - certifi=2022.9.24=py39haa95532_0
-  - cffi=1.15.1=py39h0878f49_0
-  - cftime=1.5.1.1=py39h080aedc_0
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - climateserv=0.0.20=py_1
-  - cryptography=37.0.4=py39h7bc7c5c_0
-  - curl=7.84.0=h2bbff1b_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - diff-match-patch=20200713=pyh9f0ad1d_0
-  - django=4.1=py39haa95532_0
-  - django-allauth=0.51.0=pyhd8ed1ab_0
-  - django-import-export=3.0.1=pyhd8ed1ab_0
-  - earthengine-api=0.1.334=pyhd8ed1ab_1
-  - et_xmlfile=1.0.1=py_1001
-  - frozenlist=1.3.3=py39h2bbff1b_0
-  - future=0.18.2=pyhd8ed1ab_6
-  - geos=3.10.2=h39d44d4_0
-  - google-api-core=2.10.1=pyhd8ed1ab_0
-  - google-api-python-client=2.68.0=pyhd8ed1ab_0
-  - google-auth=2.15.0=pyh1a96a4e_0
-  - google-auth-httplib2=0.1.0=pyhd8ed1ab_1
-  - google-cloud-core=2.3.2=pyhd8ed1ab_0
-  - google-cloud-storage=2.6.0=pyh1a96a4e_0
-  - google-crc32c=1.1.2=py39h3fc79e4_3
-  - google-resumable-media=2.4.0=pyhd8ed1ab_0
-  - googleapis-common-protos=1.57.0=py39h35db3c3_0
-  - grpcio=1.42.0=py39hc60d5dd_0
-  - hdf4=4.2.15=h0e5069d_3
-  - hdf5=1.12.1=nompi_h2a0e4a3_100
-  - httplib2=0.21.0=pyhd8ed1ab_0
-  - idna=3.4=pyhd8ed1ab_0
-  - intel-openmp=2022.2.1=h57928b3_19741
-  - jpeg=9e=h8ffe710_2
-  - libblas=3.9.0=12_win64_mkl
-  - libcblas=3.9.0=12_win64_mkl
-  - libcrc32c=1.1.2=h0e60522_0
-  - libcurl=7.84.0=h86230a5_0
-  - liblapack=3.9.0=12_win64_mkl
-  - libnetcdf=4.8.1=nompi_h1cc8e9d_101
-  - libpq=12.9=hb652d5d_3
-  - libprotobuf=3.20.1=h23ce68f_0
-  - libssh2=1.10.0=h680486a_2
-  - libzip=1.8.0=h49b8836_0
-  - lz4-c=1.9.3=h8ffe710_1
-  - markuppy=1.14=py_0
-  - mkl=2021.4.0=h0e2418a_729
-  - mkl-service=2.4.0=py39h6b0492b_0
-  - multidict=6.0.2=py39hb82d6ee_1
-  - netcdf4=1.6.0=nompi_py39hf113b1f_100
-  - numexpr=2.8.4=py39h5b0cc5e_0
-  - numpy=1.22.4=py39h0948cea_0
-  - oauthlib=3.2.2=pyhd8ed1ab_0
-  - odfpy=1.4.1=py_0
-  - openpyxl=3.0.9=pyhd8ed1ab_0
-  - openssl=1.1.1s=h2bbff1b_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.5.1=py39hf11a4ad_0
-  - pip=22.2.2=py39haa95532_0
-  - protobuf=3.20.1=py39hd77b12b_0
-  - psycopg2=2.8.6=py39hcd4344a_1
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pyjwt=2.6.0=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_1
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyh0701188_6
-  - python=3.9.15=h6244533_2
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-tzdata=2021.1=pyhd3eb1b0_0
-  - python3-openid=3.2.0=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pytz=2022.1=py39haa95532_0
-  - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pyyaml=6.0=py39hb82d6ee_4
-  - requests=2.28.1=pyhd8ed1ab_1
-  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
-  - rsa=4.9=pyhd8ed1ab_0
-  - setuptools=65.5.0=py39haa95532_0
-  - shapely=1.8.1=py39hf063a39_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.40.0=h2bbff1b_0
-  - sqlparse=0.4.1=py_0
-  - tablib=3.2.1=pyhd8ed1ab_0
-  - tabulate=0.9.0=pyhd8ed1ab_1
-  - tbb=2021.6.0=h59b6b97_0
-  - typing_extensions=4.1.1=pyh06a4308_0
-  - tzdata=2022f=h04d1e81_0
-  - uritemplate=4.1.1=pyhd8ed1ab_0
-  - urllib3=1.26.13=pyhd8ed1ab_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - win_inet_pton=1.1.0=pyhd8ed1ab_6
-  - wincertstore=0.2=py39haa95532_2
-  - xlrd=2.0.1=pyhd8ed1ab_3
-  - xlwt=1.3.0=py_1
-  - xz=5.2.6=h8d14728_0
-  - yaml=0.2.5=h8ffe710_2
-  - yarl=1.7.2=py39hb82d6ee_2
-  - zlib=1.2.12=h8cc25b3_2
-  - zstd=1.5.2=h19a0ad4_0
+  - python=3.9
+  - django=4.1
+  - django-allauth
+  - django-import-export
+  - netcdf4
+  - shapely
+  - earthengine-api
+  - pip
+  - pip:
+      - climateserv==0.0.24
 prefix: C:\ProgramData\Anaconda3\envs\SERVIR_AppTemplate
